<resources>
    <string name="app_name">Impermanent Rectangles</string>
</resources>